<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Cuadratica">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_weight="0.5"
        android:text="@string/ej1_label_titulo"
        android:textAlignment="center"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputA"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/ej1_label_a"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/inputB"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.5"
            android:ems="10"

            android:hint="@string/ej1_label_b"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/inputC"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/ej1_label_c"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="0.1"
            android:text="@string/ej1_label_resultados"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/inputX1"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_weight="0.1"
            android:ems="10"
            android:hint="@string/ej1_label_x1"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/inputX2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.1"
            android:ems="10"
            android:hint="@string/ej1_label_x2"
            android:inputType="numberSigned" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5"
        android:background="@color/accent"
        android:backgroundTint="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/ej1_label_calcular" />

</LinearLayout>