<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Votos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:text="@string/ej2_label_titulo"
            android:textAlignment="center"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/inputVoto"
            android:digits="1234,"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0.4"
            android:hint="@string/ej2_label"
            android:inputType="number" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.6"
            android:text="@string/ej1_label_resultados"
            android:textAlignment="center"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/diputadoNum1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_diputado"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoTotal1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_total"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoPorcentaje1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_porcentaje"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/diputadoNum2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_diputado"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoTotal2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_total"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoPorcentaje2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_porcentaje"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/diputadoNum3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_diputado"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoTotal3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_total"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoPorcentaje3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_porcentaje"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/diputadoNum4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_diputado"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoTotal4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_total"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/diputadoPorcentaje4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ej2_label_porcentaje"
                android:inputType="numberSigned" />


        </LinearLayout>

        <Button
            android:id="@+id/btnContar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/accent"
            android:backgroundTint="@color/accent"
            android:textColor="@color/icons"
            android:text="@string/ej2_contar"
            />
    </LinearLayout>


</ScrollView>